[package]
name = "ddup"
version = "0.0.4"
description = "Tool that detects potentially duplicated files in Windows NTFS volumes"
license = "MIT"
authors = ["netaneld122"]
edition = "2018"

[dependencies.winapi]
version = "0.3"
features = [
    "std", 
    "winuser", 
    "winioctl", 
    "ioapiset", 
    "errhandlingapi",
    "fileapi",
    "handleapi",
    "handleapi",
    "winnt",
    "ntdef",
    "minwindef",
]

[dependencies.crc]
version = "1.8.1"

[dependencies.clap]
version = "2.33.0"

[dependencies.glob]
version = "0.3.0"

[dependencies.walkdir]
version = "2.3.1"

[dependencies.indicatif]
version = "0.14.0"

[dependencies.rayon]
version = "1.3.0"